--- a/dealer/dealer.master
+++ b/dealer/dealer.master
@@ -1,50 +1,63 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="home.master.cs" Inherits="home" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="dealer.master.cs" Inherits="dealer_dealer" %>
 
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-<title>
+    <title></title>
     <asp:ContentPlaceHolder id="head" runat="server">
-    </asp:ContentPlaceHolder> </title>
+    </asp:ContentPlaceHolder>
 <!--css-->
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<link href="css/font-awesome.css" rel="stylesheet">
+<link href="~/css/bootstrap.css" rel="stylesheet" type="text/css" media="all"/>
+<link href="~/css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="~/css/font-awesome.css" rel="stylesheet"/>
 <!--css-->
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="New Shop Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+<meta name="keywords" content="Toy Store Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <script src="js/jquery.min.js"></script>
-<link href='//fonts.googleapis.com/css?family=Cagliostro' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Open+Sans:400,800italic,800,700italic,700,600italic,600,400italic,300italic,300' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Cagliostro' rel='stylesheet' type='text/css'/>
+<link href='//fonts.googleapis.com/css?family=Open+Sans:400,800italic,800,700italic,700,600italic,600,400italic,300italic,300' rel='stylesheet' type='text/css'/>
 <!--search jQuery-->
-	<script src="js/main.js"></script>
+	<script src="~/js/main.js"></script>
 <!--search jQuery-->
-
+<script src="~/js/responsiveslides.min.js"></script>
+ <script>
+     $(function () {
+         $("#slider").responsiveSlides({
+             auto: true,
+             nav: true,
+             speed: 500,
+             namespace: "callbacks",
+             pager: true,
+         });
+     });
+ </script>
  <!--mycart-->
-<script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
+<script type="text/javascript" src="~/js/bootstrap-3.1.1.min.js"></script>
  <!-- cart -->
-<script src="js/simpleCart.min.js"></script>
+<script src="~/js/simpleCart.min.js"></script>
 <!-- cart -->
-</head>
+  <!--start-rate-->
+<script src="~/js/jstarbox.js"></script>
+	<link rel="stylesheet" href="~/css/jstarbox.css" type="text/css" media="screen"  />
+		</head>
 <body>
 	<!--header-->
 		<div class="header">
 			<div class="header-top">
 				<div class="container">
 					 <div class="top-left">
-						<a href="#"> Help  <i class="glyphicon glyphicon-phone" aria-hidden="true"></i> +914902356565</a>
+						<a href="#"> Help  <i class="glyphicon glyphicon-phone" aria-hidden="true"></i> +0123-456-789</a>
 					</div>
 					<div class="top-right">
-					<ul>
-                        <li><asp:HyperLink ID="HyperLink1" runat="server" NavigateUrl="~/user_reg.aspx">Create User Account</asp:HyperLink></li>                        
-                        <li><asp:HyperLink ID="HyperLink2" runat="server" NavigateUrl="~/login.aspx">Login</asp:HyperLink></li>
-                        <li><asp:HyperLink ID="HyperLink3" runat="server" NavigateUrl="~/dealer_reg.aspx">Create Dealer Account</asp:HyperLink></li>
+                        
+					    <ul>
+                      <li> <asp:HyperLink ID="logout"  style="background-color: transparent;border:none;color:white;" >logout</asp:HyperLink></li> 
 					</ul>
-					</div>
+                	</div>
 					<div class="clearfix"></div>
 				</div>
 			</div>
@@ -52,7 +65,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="container">
 					<div class="logo-nav">
                         <div class="logo-nav-left">
-							<h1><asp:HyperLink ID="HyperLink5" runat="server" NavigateUrl="~/index.aspx">Toy Store<span>toys anywhere</span></asp:HyperLink></h1>
+							<h1><asp:HyperLink ID="HyperLink5" runat="server" NavigateUrl="#">Toy Store<span>toys anywhere</span></asp:HyperLink></h1>
 						</div>
 						<div class="logo-nav-left1">
 							<nav class="navbar navbar-default">
@@ -65,34 +78,35 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<span class="icon-bar"></span>
 								</button>
 							</div> 
-							<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
+							<div class="collapse navbar-collapse" ">
 								<ul class="nav navbar-nav">
 									<li>
-                                        <asp:HyperLink ID="HyperLink4" runat="server" NavigateUrl="~/index.aspx">Home</asp:HyperLink></li>	
-									<li>
-										<asp:HyperLink runat="server" NavigateUrl="~/login.aspx">Shop By Category</asp:HyperLink></li>
-									<li><asp:HyperLink runat="server" NavigateUrl="~/login.aspx">Shop By Age</asp:HyperLink></li>																
+                                        <asp:HyperLink ID="HyperLink4" runat="server" NavigateUrl="home.aspx">Products List</asp:HyperLink></li>	
+									<!-- Mega Menu -->
+									<li><asp:HyperLink runat="server" NavigateUrl="dlist.aspx">Order List</asp:HyperLink></li>
+																									
 								</ul>
 							</div>
 							</nav>
 						</div>
 						<div class="header-right2">
-						
+						 <li><asp:PlaceHolder ID="PlaceHolder1" runat="server"></asp:PlaceHolder></li>	
+							</div>	
 						</div>
 						<div class="clearfix"> </div>
 					</div>
 				</div>
 			</div>
-		</div>
 		<!--header-->
-    	<div class="bg-image bg-parallax overlay" style="background-image:url(images/b3.jpg)">
+    <div>
     <form id="form1" runat="server">
+    <div>
         <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
-    </form>
     </div>
-    		<div class="footer-w3l">
+    </form>
+        	<div class="footer-w3l">
 						<div class="container">
 							<div class="footer-grids">
 								<div class="col-md-3 footer-grid">
@@ -148,7 +162,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 				<!--copy-->
-							
-
+		
 </body>
 </html>
